# docs/swagger.json
@@ -5,6 +5,23 @@
     },
     "paths": {
         "/api/user": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "summary": "获取所有用户列表",
+                "responses": {
+                    "200": {
+                        "description": "code\", \"msg\", \"data\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "consumes": [
                     "application/json"
@@ -39,7 +56,7 @@
                 }
             }
         },
-        "/api/user/list": {
+        "/api/user/:id": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -47,7 +64,24 @@
                 "tags": [
                     "用户"
                 ],
-                "summary": "获取所有用户列表",
+                "summary": "用户详情",
+                "responses": {
+                    "200": {
+                        "description": "code\", \"msg\", \"data\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "summary": "删除用户",
                 "responses": {
                     "200": {
                         "description": "code\", \"msg\", \"data\"}",
